# auto-telemetry

./: 1.py  pyproject.toml
data/seed/: evs.csv  evs.tsv
db/ddl/: auto_ddl.sql
db/scripts/: load_locals.sql  transform01.sql
